[gd_scene load_steps=3 format=3 uid="uid://bg4ji6py6jgn8"]

[ext_resource type="Script" uid="uid://b2k1ue4nboo5g" path="res://Scene/Title/Title.gd" id="1_o7trp"]
[ext_resource type="Texture2D" uid="uid://dbheh2ownuj1e" path="res://Scene/Title/asset/TitleBackground.webp" id="2_3vhpb"]

[node name="Title" type="Node2D"]
script = ExtResource("1_o7trp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3vhpb")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 150.0
offset_top = 150.0
offset_right = 1020.0
offset_bottom = 373.0
rotation = -0.165328
theme_override_font_sizes/normal_font_size = 80
bbcode_enabled = true
text = "Title"
scroll_active = false

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 80
text = "Start Game"

[node name="UpgradeShopButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 80
text = "üõçÔ∏è Upgrade Shop"

[node name="CreditButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Credit"

[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/StartButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/UpgradeShopButton" to="." method="_on_upgrade_shop_button_pressed"]
[connection signal="button_down" from="CanvasLayer/CenterContainer/VBoxContainer/CreditButton" to="." method="_on_credit_button_button_down"]
